--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -383,6 +383,7 @@ call ..\buildDetours.bat ..\Detours
     <ClInclude Include="include\midscenvariables.h" />
     <ClInclude Include="include\midserver.h" />
     <ClInclude Include="include\midserverbuilder.h" />
+    <ClInclude Include="include\midsite.h" />
     <ClInclude Include="include\midstack.h" />
     <ClInclude Include="include\midunit.h" />
     <ClInclude Include="include\midunitgroup.h" />
