--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -168,6 +168,7 @@ call ..\buildDetours.bat ..\Detours
     <ClCompile Include="src\ddcarryoveritems.cpp" />
     <ClCompile Include="src\dialoginterf.cpp" />
     <ClCompile Include="src\difficultylevel.cpp" />
+    <ClCompile Include="src\doppelgangerhooks.cpp" />
     <ClCompile Include="src\drainattackhooks.cpp" />
     <ClCompile Include="src\dynamiccast.cpp" />
     <ClCompile Include="src\editor.cpp" />
@@ -295,6 +296,7 @@ call ..\buildDetours.bat ..\Detours
     <ClInclude Include="include\deathanimcat.h" />
     <ClInclude Include="include\dialoginterf.h" />
     <ClInclude Include="include\difficultylevel.h" />
+    <ClInclude Include="include\doppelgangerhooks.h" />
     <ClInclude Include="include\draganddropinterf.h" />
     <ClInclude Include="include\drainattackhooks.h" />
     <ClInclude Include="include\dynamiccast.h" />
