Add CBatAttackTransformSelf structure

--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -151,6 +151,7 @@ call ..\buildDetours.bat ..\Detours
     <ClCompile Include="src\batattackdrainoverflow.cpp" />
     <ClCompile Include="src\batattackgiveattack.cpp" />
     <ClCompile Include="src\batattackshatter.cpp" />
+    <ClCompile Include="src\batattacktransformself.cpp" />
     <ClCompile Include="src\battleattackinfo.cpp" />
     <ClCompile Include="src\battlemsgdata.cpp" />
     <ClCompile Include="src\bindings\dynupgradeview.cpp" />
@@ -278,6 +279,7 @@ call ..\buildDetours.bat ..\Detours
     <ClInclude Include="include\batattackdrainoverflow.h" />
     <ClInclude Include="include\batattackgiveattack.h" />
     <ClInclude Include="include\batattackshatter.h" />
+    <ClInclude Include="include\batattacktransformself.h" />
     <ClInclude Include="include\battleattackinfo.h" />
     <ClInclude Include="include\battlemsgdata.h" />
     <ClInclude Include="include\bindings\dynupgradeview.h" />
