--- a/mss32/mss32.vcxproj.filters
+++ b/mss32/mss32.vcxproj.filters
@@ -408,6 +408,9 @@
     <ClCompile Include="src\bindings\dynupgradeview.cpp">
       <Filter>Исходные файлы\bindings</Filter>
     </ClCompile>
+    <ClCompile Include="src\batattacktransformself.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
     <ClCompile Include="src\scripts.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
@@ -1101,6 +1104,9 @@
     </ClInclude>
     <ClInclude Include="include\bindings\dynupgradeview.h">
       <Filter>Файлы заголовков\bindings</Filter>
+    </ClInclude>
+    <ClInclude Include="include\batattacktransformself.h">
+      <Filter>Файлы заголовков</Filter>
     </ClInclude>
     <ClInclude Include="include\scripts.h">
       <Filter>Файлы заголовков</Filter>
