--- a/mss32/mss32.vcxproj.filters
+++ b/mss32/mss32.vcxproj.filters
@@ -411,6 +411,9 @@
     <ClCompile Include="src\batattacktransformself.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="src\attack.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
     <ClCompile Include="src\scripts.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
