--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -226,6 +226,7 @@ call ..\buildDetours.bat ..\Detours
     <ClCompile Include="src\smartptr.cpp" />
     <ClCompile Include="src\stringarray.cpp" />
     <ClCompile Include="src\targetslist.cpp" />
+    <ClCompile Include="src\transformselfhooks.cpp" />
     <ClCompile Include="src\unitbranchcat.cpp" />
     <ClCompile Include="src\unitcat.cpp" />
     <ClCompile Include="src\unitsforhire.cpp" />
@@ -449,6 +450,7 @@ call ..\buildDetours.bat ..\Detours
     <ClInclude Include="include\targetslist.h" />
     <ClInclude Include="include\taskmanagerholder.h" />
     <ClInclude Include="include\textandid.h" />
+    <ClInclude Include="include\transformselfhooks.h" />
     <ClInclude Include="include\umattack.h" />
     <ClInclude Include="include\ummodifier.h" />
     <ClInclude Include="include\umstack.h" />
