--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -227,6 +227,7 @@ call ..\buildDetours.bat ..\Detours
     <ClCompile Include="src\sitemerchantinterf.cpp" />
     <ClCompile Include="src\smartptr.cpp" />
     <ClCompile Include="src\stringarray.cpp" />
+    <ClCompile Include="src\summonhooks.cpp" />
     <ClCompile Include="src\targetslist.cpp" />
     <ClCompile Include="src\transformselfhooks.cpp" />
     <ClCompile Include="src\unitbranchcat.cpp" />
@@ -450,6 +451,7 @@ call ..\buildDetours.bat ..\Detours
     <ClInclude Include="include\stringandid.h" />
     <ClInclude Include="include\stringarray.h" />
     <ClInclude Include="include\subracecat.h" />
+    <ClInclude Include="include\summonhooks.h" />
     <ClInclude Include="include\targetslist.h" />
     <ClInclude Include="include\taskmanagerholder.h" />
     <ClInclude Include="include\textandid.h" />
