Add LImmuneCat and LImmuneCatTable api functions

--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -184,6 +184,7 @@ call ..\buildDetours.bat ..\Detours
     <ClCompile Include="src\hooks.cpp" />
     <ClCompile Include="src\idlist.cpp" />
     <ClCompile Include="src\idvector.cpp" />
+    <ClCompile Include="src\immunecat.cpp" />
     <ClCompile Include="src\interfmanager.cpp" />
     <ClCompile Include="src\itemcategory.cpp" />
     <ClCompile Include="src\itemtransferhooks.cpp" />
