--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -438,7 +438,7 @@ call ..\buildDetours.bat ..\Detours
     <ClInclude Include="include\playerbuildings.h" />
     <ClInclude Include="include\playerincomehooks.h" />
     <ClInclude Include="include\popupdialoginterf.h" />
-    <ClInclude Include="include\position.h" />
+    <ClInclude Include="include\mqpoint.h" />
     <ClInclude Include="include\presentation.h" />
     <ClInclude Include="include\racecategory.h" />
     <ClInclude Include="include\racetype.h" />
