--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -426,6 +426,7 @@ call ..\buildDetours.bat ..\Detours
     <ClInclude Include="include\mqnetsession.h" />
     <ClInclude Include="include\mqnetsystem.h" />
     <ClInclude Include="include\mqnettraffic.h" />
+    <ClInclude Include="include\mqrect.h" />
     <ClInclude Include="include\mqthread.h" />
     <ClInclude Include="include\musichooks.h" />
     <ClInclude Include="include\netdplayservice.h" />
