--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -233,6 +233,7 @@ call ..\buildDetours.bat ..\Detours
     <ClCompile Include="src\stringarray.cpp" />
     <ClCompile Include="src\summonhooks.cpp" />
     <ClCompile Include="src\targetslist.cpp" />
+    <ClCompile Include="src\terraincat.cpp" />
     <ClCompile Include="src\transformselfhooks.cpp" />
     <ClCompile Include="src\unitbranchcat.cpp" />
     <ClCompile Include="src\unitcat.cpp" />
@@ -470,6 +471,7 @@ call ..\buildDetours.bat ..\Detours
     <ClInclude Include="include\summonhooks.h" />
     <ClInclude Include="include\targetslist.h" />
     <ClInclude Include="include\taskmanagerholder.h" />
+    <ClInclude Include="include\terraincat.h" />
     <ClInclude Include="include\textandid.h" />
     <ClInclude Include="include\transformselfhooks.h" />
     <ClInclude Include="include\umattack.h" />
