--- a/mss32/mss32.vcxproj.filters
+++ b/mss32/mss32.vcxproj.filters
@@ -1186,6 +1186,9 @@
     <ClInclude Include="include\batunitanim.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="include\tilevariation.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
     <ClInclude Include="include\terraincat.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
