--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -340,6 +340,7 @@ call ..\buildDetours.bat ..\Detours
     <ClInclude Include="include\encparam.h" />
     <ClInclude Include="include\encparambase.h" />
     <ClInclude Include="include\exchangeinterf.h" />
+    <ClInclude Include="include\factoryimageanim.h" />
     <ClInclude Include="include\fortcategory.h" />
     <ClInclude Include="include\fortification.h" />
     <ClInclude Include="include\fullscreeninterf.h" />
